# cpp-template

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
